--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -153,7 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": [
     "# Enable tqdm for pandas operations\n",
