rules fix, logic update

--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "# Load the Ableton data\n",
     "from ableton_data import *\n",
+    "from utterance_actions_template import action_order_templates, utterance_templates\n",
     "\n",
     "# Load the Ollama LLM\n",
     "llm = OllamaLLM(model=\"llama3.2\")\n",
@@ -124,9 +125,11 @@
     "    \n",
     "    return action_order\n",
     "\n",
-    "def extract_track_number(utterance):\n",
-    "    match = re.search(r'track (\\d+)', utterance)\n",
-    "    return match.group(1) if match else \"1\"  # Default to track 1 if no number found\n",
+    "def extract_track_numbers(utterance):\n",
+    "    matches = re.findall(r'track (\\d+)', utterance)\n",
+    "    if not matches:\n",
+    "        return [\"1\"]  # Default to track 1 if no numbers found\n",
+    "    return matches\n",
     "\n",
     "def extract_track_type(utterance):\n",
     "    track_types = [\"audio\", \"MIDI\", \"return\", \"master\", \"group\"]\n",
