--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -10,6 +10,9 @@
    },
    "outputs": [],
    "source": [
+    "# Install required packages\n",
+    "!pip install langchain langchain_ollama pandas tqdm\n",
+    "\n",
     "import random\n",
     "import re\n",
     "import pandas as pd\n",
