--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -13,6 +13,10 @@
     "# Install required packages\n",
     "!pip install langchain langchain_ollama pandas tqdm\n",
     "\n",
+    "\n",
+    "# Clone the repository\n",
+    "!git clone https://github.com/ostinsolo/Audio-Engineer-Sound-Design-LLM.git\n",
+    "%cd Audio-Engineer-Sound-Design-LLM/ai_gen\n",
     "import random\n",
     "import re\n",
     "import pandas as pd\n",
