--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -10,13 +10,36 @@
    },
    "outputs": [],
    "source": [
-    "# Install required packages\n",
-    "!pip install langchain langchain_ollama pandas tqdm\n",
+    "import sys\n",
+    "import os\n",
     "\n",
+    "# Check if running in Colab\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
-    "# Clone the repository\n",
-    "!git clone https://github.com/ostinsolo/Audio-Engineer-Sound-Design-LLM.git\n",
-    "%cd Audio-Engineer-Sound-Design-LLM/ai_gen\n",
+    "if IN_COLAB:\n",
+    "    # Colab-specific setup\n",
+    "    !pip install langchain langchain_ollama pandas tqdm\n",
+    "    !git clone https://github.com/ostinsolo/Audio-Engineer-Sound-Design-LLM.git\n",
+    "    %cd Audio-Engineer-Sound-Design-LLM/ai_gen\n",
+    "else:\n",
+    "    # Local system setup\n",
+    "    # Check if we're in the correct directory, if not, change to it\n",
+    "    if not os.path.exists('ableton_data.py'):\n",
+    "        os.chdir('/Users/ostinsolo/Documents/Code/Audio-Engineer-Sound-Design-LLM/ai_gen')\n",
+    "    \n",
+    "    # Create and activate a virtual environment named 'aigen'\n",
+    "    !python -m venv aigen\n",
+    "    if sys.platform == \"win32\":\n",
+    "        !aigen\\Scripts\\activate\n",
+    "    else:\n",
+    "        !source aigen/bin/activate\n",
+    "    \n",
+    "    # Install required packages in the virtual environment\n",
+    "    !pip install langchain langchain_ollama pandas tqdm\n",
+    "\n",
+    "# Add the current directory to Python's path\n",
+    "sys.path.append('.')\n",
+    "\n",
     "import random\n",
     "import re\n",
     "import pandas as pd\n",
