--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -98,7 +98,10 @@
     "    action_category = random.choice(list(actions.keys()))\n",
     "    action = random.choice(actions[action_category])\n",
     "    template = random.choice(utterance_templates)\n",
-    "    speed_modifier = random.choice(sum(speed_modifiers.values(), []))\n",
+    "    \n",
+    "    # Correctly handle speed modifiers\n",
+    "    speed_modifier_category = random.choice(list(actions['speed_modifiers'].keys()))\n",
+    "    speed_modifier = random.choice(actions['speed_modifiers'][speed_modifier_category])\n",
     "    \n",
     "    # Create a simplified version of the Ableton data to pass to the AI\n",
     "    simplified_data = {\n",
@@ -114,7 +117,7 @@
     "    prompt = prompt_template.format(ableton_data=str(simplified_data))\n",
     "    output = llm(prompt)\n",
     "    return extract_utterance_and_action(output)\n",
-    "\n",
+    "    \n",
     "def generate_action_order(utterance, template):\n",
     "    action_order = template.copy()\n",
     "    \n",
