--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -12,6 +12,12 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import random\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "from langchain_ollama import OllamaLLM\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
     "# Check if running in Colab\n",
     "IN_COLAB = 'google.colab' in sys.modules\n",
@@ -40,16 +46,8 @@
     "# Add the current directory to Python's path\n",
     "sys.path.append('.')\n",
     "\n",
-    "import random\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from langchain_ollama import OllamaLLM\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
     "# Load the Ableton data\n",
     "from ableton_data import *\n",
-    "from utterance_actions_template import action_order_templates, utterance_templates\n",
     "\n",
     "# Load the Ollama LLM\n",
     "llm = OllamaLLM(model=\"llama3.2\")\n",
@@ -93,7 +91,7 @@
     "def generate_utterance_and_action():\n",
     "    # Randomly select elements from the Ableton data to encourage variety\n",
     "    audio_effect = random.choice(audio_effects)\n",
-    "    instrument = random.choice(instruments)\n",
+    "    instrument = random.choice(list(device_types.keys()))\n",
     "    device_type = random.choice(device_types[instrument])\n",
     "    action_category = random.choice(list(actions.keys()))\n",
     "    action = random.choice(actions[action_category])\n",
@@ -103,80 +101,51 @@
     "    speed_modifier_category = random.choice(list(actions['speed_modifiers'].keys()))\n",
     "    speed_modifier = random.choice(actions['speed_modifiers'][speed_modifier_category])\n",
     "    \n",
+    "    # Generate random track numbers\n",
+    "    track_number = random.randint(1, 8)  # Assuming a maximum of 8 tracks\n",
+    "    track_number1 = random.randint(1, 8)\n",
+    "    track_number2 = random.randint(1, 8)\n",
+    "    while track_number2 == track_number1:\n",
+    "        track_number2 = random.randint(1, 8)\n",
+    "    \n",
+    "    # Generate a random clip number\n",
+    "    clip_number = random.randint(1, 16)  # Assuming a maximum of 16 clips per track\n",
+    "    \n",
+    "    # Generate a random value\n",
+    "    value = random.randint(0, 100)\n",
+    "    \n",
+    "    # Generate a random number for mapping\n",
+    "    map_number = random.randint(1, 128)  # Assuming a maximum of 128 mappable controls\n",
+    "    \n",
     "    # Create a simplified version of the Ableton data to pass to the AI\n",
     "    simplified_data = {\n",
-    "        'selected_audio_effect': audio_effect,\n",
-    "        'selected_instrument': instrument,\n",
-    "        'selected_device_type': device_type,\n",
-    "        'selected_action': action,\n",
-    "        'selected_template': template,\n",
-    "        'selected_speed_modifier': speed_modifier,\n",
+    "        'track_number': track_number,\n",
+    "        'track_number1': track_number1,\n",
+    "        'track_number2': track_number2,\n",
+    "        'clip_number': clip_number,\n",
+    "        'value': value,\n",
+    "        'number': map_number,\n",
+    "        'audio_effect': audio_effect,\n",
+    "        'instrument': instrument,\n",
+    "        'device_type': device_type,\n",
+    "        'action': action,\n",
+    "        'template': template,\n",
+    "        'speed_modifier': speed_modifier,\n",
+    "        'track_type': random.choice(track_types),\n",
+    "        'device_name': random.choice(audio_effects + list(device_types.keys())),\n",
+    "        'parameter': \"some_parameter\",  # You might want to define a list of parameters in ableton_data.py\n",
+    "        'project_action': random.choice(actions['project_actions']),\n",
+    "        'track_action': random.choice(actions['track_actions']),\n",
+    "        'clip_action': random.choice(actions['clip_actions']),\n",
+    "        'value_action': random.choice(actions['value_actions']),\n",
+    "        'view_action': random.choice(actions['view_actions']),\n",
+    "        'mapping_action': random.choice(actions['mapping_actions']),\n",
     "        'action_order_templates': action_order_templates\n",
     "    }\n",
     "    \n",
     "    prompt = prompt_template.format(ableton_data=str(simplified_data))\n",
     "    output = llm(prompt)\n",
     "    return extract_utterance_and_action(output)\n",
-    "    \n",
-    "def generate_action_order(utterance, template):\n",
-    "    action_order = template.copy()\n",
-    "    \n",
-    "    # Handle track creation separately\n",
-    "    if \"create track\" in utterance or \"new track\" in utterance:\n",
-    "        return handle_track_creation(utterance, action_order)\n",
-    "    \n",
-    "    # If a device is mentioned, ensure it starts with \"search device\"\n",
-    "    if any(device in utterance for device in [\"{audio_effect}\", \"{instrument}\", \"{device_type}\"]):\n",
-    "        if action_order[0] != \"search device\":\n",
-    "            action_order.insert(0, \"search device\")\n",
-    "    \n",
-    "    # For Control actions, generate a random value\n",
-    "    if \"Control\" in utterance:\n",
-    "        value_index = action_order.index(\"{value}\")\n",
-    "        action_order[value_index] = str(random.randint(0, 100))\n",
-    "    \n",
-    "    # Ensure track-related actions start with the track number\n",
-    "    if \"track\" in utterance and not action_order[0].startswith((\"track\", \"create track\")):\n",
-    "        track_number = extract_track_number(utterance)\n",
-    "        action_order.insert(0, f\"track {track_number}\")\n",
-    "    \n",
-    "    return action_order\n",
-    "\n",
-    "def handle_track_creation(utterance, action_order):\n",
-    "    # For track creation, we don't need to add a track number\n",
-    "    if \"create track\" not in action_order:\n",
-    "        action_order.insert(0, \"create track\")\n",
-    "    \n",
-    "    # Extract track type and instrument if present\n",
-    "    track_type = extract_track_type(utterance)\n",
-    "    instrument = extract_instrument(utterance)\n",
-    "    \n",
-    "    if track_type:\n",
-    "        action_order.insert(1, track_type)\n",
-    "    if instrument:\n",
-    "        action_order.append(f\"add {instrument}\")\n",
-    "    \n",
-    "    return action_order\n",
-    "\n",
-    "def extract_track_numbers(utterance):\n",
-    "    matches = re.findall(r'track (\\d+)', utterance)\n",
-    "    if not matches:\n",
-    "        return [\"1\"]  # Default to track 1 if no numbers found\n",
-    "    return matches\n",
-    "\n",
-    "def extract_track_type(utterance):\n",
-    "    track_types = [\"audio\", \"MIDI\", \"return\", \"master\", \"group\"]\n",
-    "    for track_type in track_types:\n",
-    "        if track_type.lower() in utterance.lower():\n",
-    "            return track_type\n",
-    "    return \"audio\"  # Default to audio if no type specified\n",
-    "\n",
-    "def extract_instrument(utterance):\n",
-    "    # This function would contain logic to extract the instrument name from the utterance\n",
-    "    # For simplicity, let's assume it just checks for the presence of \"instrument\" keyword\n",
-    "    if \"instrument\" in utterance:\n",
-    "        return \"{instrument}\"\n",
-    "    return None\n",
     "\n",
     "# Generate the data\n",
     "num_generations = 100  # You can adjust this number\n",
@@ -187,7 +156,13 @@
     "    if utterance and action_order:\n",
     "        generated_data.append({\"Utterance\": utterance, \"Action_Order\": action_order})\n",
     "\n",
-    "print(f\"Generated {len(generated_data)} utterances and action orders.\")"
+    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n",
+    "\n",
+    "# Save the generated data to a CSV file\n",
+    "output_file = 'generated_utterances_and_actions.csv'\n",
+    "df = pd.DataFrame(generated_data)\n",
+    "df.to_csv(output_file, index=False)\n",
+    "print(f\"Data saved to {output_file}\")"
    ]
   },
   {
