--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -156,13 +156,7 @@
     "    if utterance and action_order:\n",
     "        generated_data.append({\"Utterance\": utterance, \"Action_Order\": action_order})\n",
     "\n",
-    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n",
-    "\n",
-    "# Save the generated data to a CSV file\n",
-    "output_file = 'generated_utterances_and_actions.csv'\n",
-    "df = pd.DataFrame(generated_data)\n",
-    "df.to_csv(output_file, index=False)\n",
-    "print(f\"Data saved to {output_file}\")"
+    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n"
    ]
   },
   {
