--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -102,20 +102,20 @@
     "    speed_modifier = random.choice(actions['speed_modifiers'][speed_modifier_category])\n",
     "    \n",
     "    # Generate random track numbers\n",
-    "    track_number = random.randint(1, 50)  # Assuming a maximum of 8 tracks\n",
-    "    track_number1 = random.randint(1, 50)\n",
-    "    track_number2 = random.randint(1, 50)\n",
+    "    track_number = random.randint(1, 8)  # Assuming a maximum of 8 tracks\n",
+    "    track_number1 = random.randint(1, 8)\n",
+    "    track_number2 = random.randint(1, 8)\n",
     "    while track_number2 == track_number1:\n",
-    "        track_number2 = random.randint(1, 50)\n",
+    "        track_number2 = random.randint(1, 8)\n",
     "    \n",
     "    # Generate a random clip number\n",
-    "    clip_number = random.randint(1, 80)  # Assuming a maximum of 16 clips per track\n",
+    "    clip_number = random.randint(1, 16)  # Assuming a maximum of 16 clips per track\n",
     "    \n",
     "    # Generate a random value\n",
     "    value = random.randint(0, 100)\n",
     "    \n",
     "    # Generate a random number for mapping\n",
-    "    map_number = random.randint(1, 30)  # Assuming a maximum of 128 mappable controls\n",
+    "    map_number = random.randint(1, 128)  # Assuming a maximum of 128 mappable controls\n",
     "    \n",
     "    # Create a simplified version of the Ableton data to pass to the AI\n",
     "    simplified_data = {\n",
@@ -133,7 +133,7 @@
     "        'speed_modifier': speed_modifier,\n",
     "        'track_type': random.choice(track_types),\n",
     "        'device_name': random.choice(audio_effects + list(device_types.keys())),\n",
-    "        'parameter': \"some_parameter\",  # You might want to define a list of parameters in ableton_data.py\n",
+    "        'parameter': random.choice(parameters),\n",
     "        'project_action': random.choice(actions['project_actions']),\n",
     "        'track_action': random.choice(actions['track_actions']),\n",
     "        'clip_action': random.choice(actions['clip_actions']),\n",
@@ -143,10 +143,13 @@
     "        'action_order_templates': action_order_templates\n",
     "    }\n",
     "    \n",
-    "    prompt = prompt_template.format(ableton_data=str(simplified_data))\n",
+    "    # Format the template with the simplified data\n",
+    "    formatted_template = template.format(**simplified_data)\n",
+    "    \n",
+    "    prompt = prompt_template.format(ableton_data=formatted_template)\n",
     "    output = llm(prompt)\n",
     "    return extract_utterance_and_action(output)\n",
-    "\n",
+    "    \n",
     "# Generate the data\n",
     "num_generations = 100  # You can adjust this number\n",
     "generated_data = []\n",
