notebook value adjustment

--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -91,31 +91,34 @@
     "def generate_utterance_and_action():\n",
     "    # Randomly select elements from the Ableton data to encourage variety\n",
     "    audio_effect = random.choice(audio_effects)\n",
-    "    instrument = random.choice(list(device_types.keys()))\n",
+    "    instrument = random.choice(instruments)\n",
     "    device_type = random.choice(device_types[instrument])\n",
-    "    action_category = random.choice(list(actions.keys()))\n",
-    "    action = random.choice(actions[action_category])\n",
-    "    template = random.choice(utterance_templates)\n",
     "    \n",
-    "    # Correctly handle speed modifiers\n",
+    "    # Correctly handle actions and speed modifiers\n",
+    "    track_creation_action = random.choice(actions['track_creation_actions'])\n",
+    "    track_action = random.choice(actions['track_actions'])\n",
+    "    project_action = random.choice(actions['project_actions'])\n",
+    "    clip_action = random.choice(actions['clip_actions'])\n",
+    "    value_action = random.choice(actions['value_actions'])\n",
+    "    view_action = random.choice(actions['view_actions'])\n",
+    "    mapping_action = random.choice(actions['mapping_actions'])\n",
+    "    \n",
     "    speed_modifier_category = random.choice(list(actions['speed_modifiers'].keys()))\n",
     "    speed_modifier = random.choice(actions['speed_modifiers'][speed_modifier_category])\n",
     "    \n",
+    "    template = random.choice(utterance_templates)\n",
+    "    \n",
     "    # Generate random track numbers\n",
-    "    track_number = random.randint(1, 8)  # Assuming a maximum of 8 tracks\n",
+    "    track_number = random.randint(1, 8)\n",
     "    track_number1 = random.randint(1, 8)\n",
     "    track_number2 = random.randint(1, 8)\n",
     "    while track_number2 == track_number1:\n",
     "        track_number2 = random.randint(1, 8)\n",
     "    \n",
-    "    # Generate a random clip number\n",
-    "    clip_number = random.randint(1, 16)  # Assuming a maximum of 16 clips per track\n",
-    "    \n",
-    "    # Generate a random value\n",
+    "    # Generate other random values\n",
+    "    clip_number = random.randint(1, 16)\n",
     "    value = random.randint(0, 100)\n",
-    "    \n",
-    "    # Generate a random number for mapping\n",
-    "    map_number = random.randint(1, 128)  # Assuming a maximum of 128 mappable controls\n",
+    "    map_number = random.randint(1, 128)\n",
     "    \n",
     "    # Create a simplified version of the Ableton data to pass to the AI\n",
     "    simplified_data = {\n",
@@ -128,28 +131,32 @@
     "        'audio_effect': audio_effect,\n",
     "        'instrument': instrument,\n",
     "        'device_type': device_type,\n",
-    "        'action': action,\n",
-    "        'template': template,\n",
-    "        'speed_modifier': speed_modifier,\n",
+    "        'track_creation_actions': track_creation_action,\n",
+    "        'track_actions': track_action,\n",
+    "        'project_actions': project_action,\n",
+    "        'clip_actions': clip_action,\n",
+    "        'value_actions': value_action,\n",
+    "        'view_actions': view_action,\n",
+    "        'mapping_actions': mapping_action,\n",
+    "        'speed_modifiers': speed_modifier,\n",
     "        'track_type': random.choice(track_types),\n",
-    "        'device_name': random.choice(audio_effects + list(device_types.keys())),\n",
-    "        'parameter': random.choice(parameters),\n",
-    "        'project_action': random.choice(actions['project_actions']),\n",
-    "        'track_action': random.choice(actions['track_actions']),\n",
-    "        'clip_action': random.choice(actions['clip_actions']),\n",
-    "        'value_action': random.choice(actions['value_actions']),\n",
-    "        'view_action': random.choice(actions['view_actions']),\n",
-    "        'mapping_action': random.choice(actions['mapping_actions']),\n",
-    "        'action_order_templates': action_order_templates\n",
+    "        'device_name': random.choice(audio_effects + instruments),\n",
+    "        'parameter': random.choice(parameters)\n",
     "    }\n",
     "    \n",
     "    # Format the template with the simplified data\n",
-    "    formatted_template = template.format(**simplified_data)\n",
+    "    try:\n",
+    "        formatted_template = template.format(**simplified_data)\n",
+    "    except KeyError as e:\n",
+    "        print(f\"KeyError: {e} is missing in the simplified_data\")\n",
+    "        print(\"Template:\", template)\n",
+    "        print(\"Simplified data:\", simplified_data)\n",
+    "        return None, None\n",
     "    \n",
     "    prompt = prompt_template.format(ableton_data=formatted_template)\n",
     "    output = llm(prompt)\n",
     "    return extract_utterance_and_action(output)\n",
-    "    \n",
+    "\n",
     "# Generate the data\n",
     "num_generations = 100  # You can adjust this number\n",
     "generated_data = []\n",
