notebook value adjustment

--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -91,7 +91,7 @@
     "def generate_utterance_and_action():\n",
     "    # Randomly select elements from the Ableton data to encourage variety\n",
     "    audio_effect = random.choice(audio_effects)\n",
-    "    instrument = random.choice(instruments)\n",
+    "    instrument = random.choice(list(device_types.keys()))\n",
     "    device_type = random.choice(device_types[instrument])\n",
     "    \n",
     "    # Correctly handle actions and speed modifiers\n",
@@ -140,7 +140,7 @@
     "        'mapping_actions': mapping_action,\n",
     "        'speed_modifiers': speed_modifier,\n",
     "        'track_type': random.choice(track_types),\n",
-    "        'device_name': random.choice(audio_effects + instruments),\n",
+    "        'device_name': random.choice(audio_effects + list(device_types.keys())),\n",
     "        'parameter': random.choice(parameters)\n",
     "    }\n",
     "    \n",
@@ -166,7 +166,8 @@
     "    if utterance and action_order:\n",
     "        generated_data.append({\"Utterance\": utterance, \"Action_Order\": action_order})\n",
     "\n",
-    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n"
+    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n",
+    "\n"
    ]
   },
   {
