notebook value adjustment

--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -66,14 +66,39 @@
     "Action Order: [\"step 1\", \"step 2\", ...]\n",
     "\n",
     "Rules:\n",
-    "1. Track-related actions always start with \"track {track_number}\" unless it's a global action.\n",
-    "2. Device-related actions always start with \"search device\" followed by the device name.\n",
-    "3. For instruments, the order is: \"search device\", \"{instrument}\", \"{device_type}\", then the action.\n",
-    "4. Audio effects are treated separately from instruments.\n",
-    "5. Control actions include one of the speed modifiers, followed by a value between 0 and 100.\n",
-    "6. When creating a track, don't mention a track number (it doesn't exist yet).\n",
-    "7. Use one of the common actions in the utterance.\n",
-    "8. You can use or adapt one of the utterance templates, or create a new utterance based on the provided data.\n",
+    "1. Track creation actions don't include a track number (the track doesn't exist yet).\n",
+    "2. Other track-related actions always start with \"track {ableton_data[track_number]}\".\n",
+    "3. Device-related actions always start with \"track {ableton_data[track_number]}\", \"search device\", followed by the device name.\n",
+    "4. For instruments, the order is: \"track {ableton_data[track_number]}\", \"search device\", \"{ableton_data[instrument]}\", \"{ableton_data[device_type]}\".\n",
+    "5. Audio effects are treated separately from instruments.\n",
+    "6. Value actions include the device name, parameter, action (set/increase/decrease), speed modifier, and value.\n",
+    "7. Project actions are global and don't require a track number.\n",
+    "8. Clip actions always include a track number and clip number.\n",
+    "9. View actions change the current view in Ableton Live and don't require a track number.\n",
+    "10. Mapping actions involve assigning controls to parameters and may not require a track number.\n",
+    "\n",
+    "Placeholder Usage:\n",
+    "- Use {ableton_data[track_creation_actions]} for creating new tracks.\n",
+    "- Use {ableton_data[track_actions]} for actions on specific tracks.\n",
+    "- Use {ableton_data[audio_effect]} for audio effects.\n",
+    "- Use {ableton_data[instrument]} and {ableton_data[device_type]} for instruments.\n",
+    "- Use {ableton_data[project_actions]} for global project actions.\n",
+    "- Use {ableton_data[track_type]} when specifying track types.\n",
+    "- Use {ableton_data[clip_actions]} for actions on clips.\n",
+    "- Use {ableton_data[device_name]} and {ableton_data[parameter]} when adjusting devices.\n",
+    "- Use {ableton_data[value_actions]} and {ableton_data[speed_modifiers]} for value changes.\n",
+    "- Use {ableton_data[view_actions]} for changing views in Ableton Live.\n",
+    "- Use {ableton_data[mapping_actions]} for control mapping operations.\n",
+    "\n",
+    "Action Types:\n",
+    "1. Track creation actions: Create new tracks without a track number.\n",
+    "2. Track actions: Perform on specific tracks, require a track number.\n",
+    "3. Project actions: Global actions, no track number required.\n",
+    "4. Device actions: Perform on devices within tracks, require track number and device name.\n",
+    "5. Clip actions: Perform on clips within tracks, require track number and clip number.\n",
+    "6. Value actions: Modify device parameters, require track number, device name, parameter, action, speed modifier, and value.\n",
+    "7. View actions: Change the current view, no track number required.\n",
+    "8. Mapping actions: Assign controls to parameters, may or may not require a track number.\n",
     "\n",
     "Now generate a new, unique utterance and action order:\n",
     "\"\"\"\n",
@@ -153,7 +178,8 @@
     "        print(\"Simplified data:\", simplified_data)\n",
     "        return None, None\n",
     "    \n",
-    "    prompt = prompt_template.format(ableton_data=formatted_template)\n",
+    "    # Pass the simplified_data to the prompt_template, not the formatted_template\n",
+    "    prompt = prompt_template.format(ableton_data=simplified_data)\n",
     "    output = llm(prompt)\n",
     "    return extract_utterance_and_action(output)\n",
     "\n",
@@ -166,8 +192,7 @@
     "    if utterance and action_order:\n",
     "        generated_data.append({\"Utterance\": utterance, \"Action_Order\": action_order})\n",
     "\n",
-    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n",
-    "\n"
+    "print(f\"Generated {len(generated_data)} utterances and action orders.\")"
    ]
   },
   {
