notebook test improment

--- a/ai_gen/auto_utterance_action.ipynb
+++ b/ai_gen/auto_utterance_action.ipynb
@@ -14,6 +14,8 @@
     "import os\n",
     "import random\n",
     "import re\n",
+    "import json\n",
+    "import logging\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from langchain_ollama import OllamaLLM\n",
@@ -30,77 +32,92 @@
     "# Load the Ableton data\n",
     "from ableton_data import *\n",
     "\n",
+    "# Configure logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
     "# Load the Ollama LLM\n",
     "llm = OllamaLLM(model=\"llama3.2\")\n",
     "\n",
     "# Define the prompt template\n",
     "prompt_template = PromptTemplate(\n",
-    "    input_variables=[\"ableton_data\"],\n",
+    "    input_variables=[\"placeholders\", \"examples\"],\n",
     "    template=\"\"\"\n",
-    "Generate a unique utterance for an Ableton Live task and its corresponding action order. Use the provided Ableton data to ensure relevance and accuracy.\n",
+    "Generate a unique utterance for an Ableton Live task and its corresponding action order based on the provided placeholders. Use the same placeholder values in both the utterance and the action order.\n",
     "\n",
-    "Ableton Data:\n",
-    "{ableton_data}\n",
+    "Examples:\n",
+    "\n",
+    "{examples}\n",
+    "\n",
+    "Placeholders:\n",
+    "{placeholders}\n",
     "\n",
     "Format the output as follows:\n",
     "Utterance: [insert utterance here]\n",
     "Action Order: [\"step 1\", \"step 2\", ...]\n",
     "\n",
-    "Rules:\n",
-    "1. Track creation actions don't include a track number (the track doesn't exist yet).\n",
-    "2. Other track-related actions always start with \"track {ableton_data[track_number]}\".\n",
-    "3. Device-related actions always start with \"track {ableton_data[track_number]}\", \"search device\", followed by the device name.\n",
-    "4. For instruments, the order is: \"track {ableton_data[track_number]}\", \"search device\", \"{ableton_data[instrument]}\", \"{ableton_data[device_type]}\".\n",
-    "5. Audio effects are treated separately from instruments.\n",
-    "6. Value actions include the device name, parameter, action (set/increase/decrease), speed modifier, and value.\n",
-    "7. Project actions are global and don't require a track number.\n",
-    "8. Clip actions always include a track number and clip number.\n",
-    "9. View actions change the current view in Ableton Live and don't require a track number.\n",
-    "10. Mapping actions involve assigning controls to parameters and may not require a track number.\n",
-    "\n",
-    "Placeholder Usage:\n",
-    "- Use {ableton_data[track_creation_actions]} for creating new tracks.\n",
-    "- Use {ableton_data[track_actions]} for actions on specific tracks.\n",
-    "- Use {ableton_data[audio_effect]} for audio effects.\n",
-    "- Use {ableton_data[instrument]} and {ableton_data[device_type]} for instruments.\n",
-    "- Use {ableton_data[project_actions]} for global project actions.\n",
-    "- Use {ableton_data[track_type]} when specifying track types.\n",
-    "- Use {ableton_data[clip_actions]} for actions on clips.\n",
-    "- Use {ableton_data[device_name]} and {ableton_data[parameter]} when adjusting devices.\n",
-    "- Use {ableton_data[value_actions]} and {ableton_data[speed_modifiers]} for value changes.\n",
-    "- Use {ableton_data[view_actions]} for changing views in Ableton Live.\n",
-    "- Use {ableton_data[mapping_actions]} for control mapping operations.\n",
-    "\n",
-    "Action Types:\n",
-    "1. Track creation actions: Create new tracks without a track number.\n",
-    "2. Track actions: Perform on specific tracks, require a track number.\n",
-    "3. Project actions: Global actions, no track number required.\n",
-    "4. Device actions: Perform on devices within tracks, require track number and device name.\n",
-    "5. Clip actions: Perform on clips within tracks, require track number and clip number.\n",
-    "6. Value actions: Modify device parameters, require track number, device name, parameter, action, speed modifier, and value.\n",
-    "7. View actions: Change the current view, no track number required.\n",
-    "8. Mapping actions: Assign controls to parameters, may or may not require a track number.\n",
-    "\n",
-    "Now generate a new, unique utterance and action order:\n",
+    "Now generate the utterance and action order.\n",
     "\"\"\"\n",
     ")\n",
     "\n",
+    "def format_placeholders(placeholders):\n",
+    "    return '\\n'.join(f\"- {key}: \\\"{value}\\\"\" for key, value in placeholders.items())\n",
+    "\n",
+    "examples_list = [\n",
+    "    {\n",
+    "        'placeholders': {\n",
+    "            'track_creation_action': 'add',\n",
+    "            'track_type': 'MIDI'\n",
+    "        },\n",
+    "        'utterance': 'Add a MIDI track',\n",
+    "        'action_order': '[\"add\", \"MIDI\"]'\n",
+    "    },\n",
+    "    {\n",
+    "        'placeholders': {\n",
+    "            'track_number': 2,\n",
+    "            'track_action': 'mute'\n",
+    "        },\n",
+    "        'utterance': 'Mute track 2',\n",
+    "        'action_order': '[\"track 2\", \"mute\"]'\n",
+    "    },\n",
+    "    # Add more examples as needed\n",
+    "]\n",
+    "\n",
+    "def format_examples(examples):\n",
+    "    formatted_examples = \"\"\n",
+    "    for example in examples:\n",
+    "        placeholders_str = '\\n'.join(f\"- {key}: \\\"{value}\\\"\" for key, value in example['placeholders'].items())\n",
+    "        formatted_examples += f\"\"\"\n",
+    "Example:\n",
+    "Placeholders:\n",
+    "{placeholders_str}\n",
+    "\n",
+    "Utterance: \"{example['utterance']}\"\n",
+    "Action Order: {example['action_order']}\n",
+    "\"\"\"\n",
+    "    return formatted_examples\n",
+    "\n",
     "def extract_utterance_and_action(response):\n",
-    "    utterance_match = re.search(r'Utterance: (.+)', response)\n",
-    "    action_order_match = re.search(r'Action Order: (\\[.+\\])', response)\n",
+    "    utterance_match = re.search(r'Utterance:\\s*(.+)', response)\n",
+    "    action_order_match = re.search(r'Action Order:\\s*(\\[[^\\]]*\\])', response)\n",
     "    \n",
-    "    utterance = utterance_match.group(1) if utterance_match else None\n",
-    "    action_order = eval(action_order_match.group(1)) if action_order_match else None\n",
+    "    utterance = utterance_match.group(1).strip() if utterance_match else None\n",
+    "    action_order_str = action_order_match.group(1).strip() if action_order_match else None\n",
+    "    \n",
+    "    try:\n",
+    "        action_order = json.loads(action_order_str.replace(\"'\", '\"'))\n",
+    "    except (json.JSONDecodeError, TypeError):\n",
+    "        action_order = None\n",
     "    \n",
     "    return utterance, action_order\n",
     "\n",
     "def generate_utterance_and_action():\n",
-    "    # Randomly select elements from the Ableton data to encourage variety\n",
+    "    # Randomly select elements from the Ableton data\n",
     "    audio_effect = random.choice(audio_effects)\n",
     "    instrument = random.choice(list(device_types.keys()))\n",
-    "    device_type = random.choice(device_types[instrument])\n",
-    "    \n",
-    "    # Correctly handle actions and speed modifiers\n",
+    "    device_type = random.choice(device_types[instrument]) if device_types[instrument] else ''\n",
+    "\n",
+    "    # Select actions and modifiers\n",
     "    track_creation_action = random.choice(actions['track_creation_actions'])\n",
     "    track_action = random.choice(actions['track_actions'])\n",
     "    project_action = random.choice(actions['project_actions'])\n",
@@ -112,22 +129,25 @@
     "    speed_modifier_category = random.choice(list(actions['speed_modifiers'].keys()))\n",
     "    speed_modifier = random.choice(actions['speed_modifiers'][speed_modifier_category])\n",
     "    \n",
+    "    # Randomly select a template\n",
     "    template = random.choice(utterance_templates)\n",
     "    \n",
-    "    # Generate random track numbers\n",
+    "    # Generate random track numbers and other values\n",
     "    track_number = random.randint(1, 8)\n",
     "    track_number1 = random.randint(1, 8)\n",
     "    track_number2 = random.randint(1, 8)\n",
     "    while track_number2 == track_number1:\n",
     "        track_number2 = random.randint(1, 8)\n",
     "    \n",
-    "    # Generate other random values\n",
     "    clip_number = random.randint(1, 16)\n",
     "    value = random.randint(0, 100)\n",
     "    map_number = random.randint(1, 128)\n",
+    "    track_type = random.choice(track_types)\n",
+    "    device_name = random.choice(audio_effects + list(device_types.keys()))\n",
+    "    parameter = random.choice(parameters)\n",
     "    \n",
-    "    # Create a simplified version of the Ableton data to pass to the AI\n",
-    "    simplified_data = {\n",
+    "    # Create placeholders dictionary\n",
+    "    placeholders = {\n",
     "        'track_number': track_number,\n",
     "        'track_number1': track_number1,\n",
     "        'track_number2': track_number2,\n",
@@ -137,35 +157,42 @@
     "        'audio_effect': audio_effect,\n",
     "        'instrument': instrument,\n",
     "        'device_type': device_type,\n",
-    "        'track_creation_actions': track_creation_action,\n",
-    "        'track_actions': track_action,\n",
-    "        'project_actions': project_action,\n",
-    "        'clip_actions': clip_action,\n",
-    "        'value_actions': value_action,\n",
-    "        'view_actions': view_action,\n",
-    "        'mapping_actions': mapping_action,\n",
-    "        'speed_modifiers': speed_modifier,\n",
-    "        'track_type': random.choice(track_types),\n",
-    "        'device_name': random.choice(audio_effects + list(device_types.keys())),\n",
-    "        'parameter': random.choice(parameters)\n",
+    "        'track_creation_action': track_creation_action,\n",
+    "        'track_action': track_action,\n",
+    "        'project_action': project_action,\n",
+    "        'clip_action': clip_action,\n",
+    "        'value_action': value_action,\n",
+    "        'view_action': view_action,\n",
+    "        'mapping_action': mapping_action,\n",
+    "        'speed_modifier': speed_modifier,\n",
+    "        'track_type': track_type,\n",
+    "        'device_name': device_name,\n",
+    "        'parameter': parameter\n",
     "    }\n",
     "    \n",
-    "    # Format the template with the simplified data\n",
-    "    try:\n",
-    "        formatted_template = template.format(**simplified_data)\n",
-    "    except KeyError as e:\n",
-    "        print(f\"KeyError: {e} is missing in the simplified_data\")\n",
-    "        print(\"Template:\", template)\n",
-    "        print(\"Simplified data:\", simplified_data)\n",
+    "    # Format placeholders\n",
+    "    placeholders_str = format_placeholders(placeholders)\n",
+    "    \n",
+    "    # Prepare examples\n",
+    "    examples = format_examples(examples_list)\n",
+    "    \n",
+    "    # Prepare the prompt\n",
+    "    prompt = prompt_template.format(placeholders=placeholders_str, examples=examples)\n",
+    "    \n",
+    "    # Invoke the LLM\n",
+    "    output = llm(prompt)\n",
+    "    \n",
+    "    # Extract the utterance and action order\n",
+    "    utterance, action_order = extract_utterance_and_action(output)\n",
+    "    \n",
+    "    if not utterance or not action_order:\n",
+    "        logger.warning(f\"Failed to extract utterance or action order from output: {output}\")\n",
     "        return None, None\n",
     "    \n",
-    "    # Pass the simplified_data to the prompt_template, not the formatted_template\n",
-    "    prompt = prompt_template.format(ableton_data=simplified_data)\n",
-    "    output = llm(prompt)\n",
-    "    return extract_utterance_and_action(output)\n",
+    "    return utterance, action_order\n",
     "\n",
     "# Generate the data\n",
-    "num_generations = 100  # You can adjust this number\n",
+    "num_generations = 100  # Adjust as needed\n",
     "generated_data = []\n",
     "\n",
     "for _ in tqdm(range(num_generations), desc=\"Generating utterances and actions\"):\n",
@@ -173,7 +200,7 @@
     "    if utterance and action_order:\n",
     "        generated_data.append({\"Utterance\": utterance, \"Action_Order\": action_order})\n",
     "\n",
-    "print(f\"Generated {len(generated_data)} utterances and action orders.\")"
+    "print(f\"Generated {len(generated_data)} utterances and action orders.\")\n"
    ]
   },
   {
